rewrite structure